[gd_scene load_steps=20 format=3 uid="uid://6jfegpnu1t1s"]

[ext_resource type="PackedScene" uid="uid://dgfc86stwm1e3" path="res://Scripts/UI/make_game_panel.tscn" id="1_4cfp4"]
[ext_resource type="Script" path="res://Scripts/UI/PlayerUI.gd" id="1_jfvu4"]
[ext_resource type="Script" path="res://Scripts/UI/GameCreatorUI.gd" id="2_e4q7d"]
[ext_resource type="Script" path="res://Scripts/UI/SizeofGameButton.gd" id="4_4xcbg"]
[ext_resource type="PackedScene" uid="uid://citqmecducf4g" path="res://Scripts/UI/game_panel.tscn" id="4_d4la8"]
[ext_resource type="Script" path="res://Scripts/UI/BuyUpgradeUI/BuyUpgradesUI.gd" id="6_8x1ej"]
[ext_resource type="PackedScene" uid="uid://d3uv5uxa34dos" path="res://Scripts/UI/BuyUpgradeUI/buy_upgrade_panel.tscn" id="6_bviiu"]
[ext_resource type="Script" path="res://Scripts/UI/VersionLabel.gd" id="7_4458b"]
[ext_resource type="Script" path="res://Scripts/UI/MarketingUI.gd" id="8_4d45v"]
[ext_resource type="PackedScene" uid="uid://jsdanpotvxk" path="res://Scripts/UI/BuyUpgradeUI/buy_upgrade_panel_locked.tscn" id="8_ahpqy"]
[ext_resource type="PackedScene" uid="uid://oeqto4onjhnd" path="res://Scripts/UI/MarketingUpgrade/marketing_upgrade.tscn" id="9_ytjte"]
[ext_resource type="Script" path="res://Scripts/UI/EffectUI/EffectsInfo.gd" id="11_5kjo3"]
[ext_resource type="Script" path="res://Scripts/UI/ReviewUI/ReviewsUI.gd" id="11_8aldi"]
[ext_resource type="PackedScene" uid="uid://5cun7ak7m011" path="res://Scripts/UI/ReviewUI/review_ui.tscn" id="11_qq836"]
[ext_resource type="PackedScene" uid="uid://bha5hrnpupo4x" path="res://Scripts/UI/EffectUI/effect_ui.tscn" id="12_6l22y"]
[ext_resource type="Script" path="res://Scripts/UI/MainMenu.gd" id="15_vfr1k"]
[ext_resource type="PackedScene" uid="uid://dfdxk01kfb74c" path="res://Scripts/UI/hint.tscn" id="16_0i5no"]
[ext_resource type="PackedScene" uid="uid://vny7b0q7sfdn" path="res://Scripts/SaveObject/save_object.tscn" id="16_sxmxt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8g26s"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.462745)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_jfvu4")

[node name="GridContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="GameCreator" type="Panel" parent="GridContainer" node_paths=PackedStringArray("player_ui", "grid_container", "money_label", "created_games_label", "date_in_game_label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8g26s")
script = ExtResource("2_e4q7d")
player_ui = NodePath("../..")
grid_container = NodePath("ScrollContainer/VBoxContainer/GridContainer/GamePanels")
game_panel_scene = ExtResource("4_d4la8")
money_label = NodePath("ScrollContainer/VBoxContainer/GridContainer/MoneyLabel")
created_games_label = NodePath("ScrollContainer/VBoxContainer/GridContainer/CreatedGames")
date_in_game_label = NodePath("ScrollContainer/VBoxContainer/GridContainer/DateInGame")

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer/GameCreator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_bottom = 6583.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/GameCreator/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="DateInGame" type="Label" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "10.07.2025"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="MoneyLabel" type="Label" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "100$"
horizontal_alignment = 1

[node name="CreatedGames" type="Label" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "0 Games"
horizontal_alignment = 1

[node name="MarginContainer5" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="SizeOfGameContainer" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="SizeofGameButton" type="OptionButton" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/SizeOfGameContainer" node_paths=PackedStringArray("player_ui")]
layout_mode = 2
focus_mode = 0
script = ExtResource("4_4xcbg")
player_ui = NodePath("../../../../../../..")

[node name="MarginContainer4" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 11

[node name="MakeGameMargin" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MakeGamePanel" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/MakeGameMargin" node_paths=PackedStringArray("player_ui") instance=ExtResource("1_4cfp4")]
layout_mode = 2
mouse_filter = 1
player_ui = NodePath("../../../../../../..")

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="GamePanels" type="GridContainer" parent="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuyUpgrades" type="Panel" parent="GridContainer" node_paths=PackedStringArray("player_ui")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8g26s")
script = ExtResource("6_8x1ej")
player_ui = NodePath("../..")
buy_upgrade_panel_scene = ExtResource("6_bviiu")
buy_upgrade_panel_locked_scene = ExtResource("8_ahpqy")

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer/BuyUpgrades"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/BuyUpgrades/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/BuyUpgrades/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="UpgradeList" type="GridContainer" parent="GridContainer/BuyUpgrades/ScrollContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/BuyUpgrades/ScrollContainer/VBoxContainer/MarginContainer/UpgradeList"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="GridContainer/BuyUpgrades/ScrollContainer/VBoxContainer/MarginContainer/UpgradeList"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Upgrades"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer/BuyUpgrades/ScrollContainer/VBoxContainer/MarginContainer/UpgradeList"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Marketing" type="Panel" parent="GridContainer" node_paths=PackedStringArray("player_ui")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8g26s")
script = ExtResource("8_4d45v")
marketing_upgrade_scene = ExtResource("9_ytjte")
player_ui = NodePath("../..")

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer/Marketing"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/Marketing/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="MarketingUIElements" type="GridContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Marketing"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="FansText" type="Label" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "Fans"
horizontal_alignment = 1

[node name="FansCount" type="Label" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "1k"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="MarketingUpgradesCenterContainer" type="CenterContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2

[node name="MarketingUpgradesContainer" type="GridContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/MarketingUpgradesCenterContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 3

[node name="MarketingUpgrade" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/MarketingUpgradesCenterContainer/MarketingUpgradesContainer" instance=ExtResource("9_ytjte")]
layout_mode = 2

[node name="MarketingUpgrade2" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/MarketingUpgradesCenterContainer/MarketingUpgradesContainer" instance=ExtResource("9_ytjte")]
layout_mode = 2

[node name="MarketingUpgrade3" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/MarketingUpgradesCenterContainer/MarketingUpgradesContainer" instance=ExtResource("9_ytjte")]
layout_mode = 2

[node name="MarginContainer4" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
theme_override_constants/margin_top = 30
theme_override_constants/margin_bottom = 30

[node name="EffectsInfoContainer" type="CenterContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2

[node name="EffectsInfo" type="GridContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/EffectsInfoContainer" node_paths=PackedStringArray("player_ui")]
layout_mode = 2
columns = 5
script = ExtResource("11_5kjo3")
effect_ui_scene = ExtResource("12_6l22y")
player_ui = NodePath("../../../../../../../..")

[node name="ReviewsContainer" type="MarginContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Reviews" type="GridContainer" parent="GridContainer/Marketing/ScrollContainer/VBoxContainer/MarginContainer/MarketingUIElements/ReviewsContainer" node_paths=PackedStringArray("player_ui")]
layout_mode = 2
theme_override_constants/v_separation = 15
script = ExtResource("11_8aldi")
review_ui_scene = ExtResource("11_qq836")
player_ui = NodePath("../../../../../../../..")

[node name="MainMenu" type="Panel" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_8g26s")
script = ExtResource("15_vfr1k")

[node name="ScrollContainer" type="ScrollContainer" parent="GridContainer/MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer/MainMenu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="MainMenuUIElements" type="GridContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Main Menu"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicCount" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "0%"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Control" type="Control" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="SoundLabel" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "Sound Volume"
horizontal_alignment = 1

[node name="SoundCount" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 25
text = "0%"
horizontal_alignment = 1

[node name="SoundSlider" type="HSlider" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01

[node name="Control2" type="Control" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="ApplySettings" type="Button" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
focus_mode = 0
text = "Apply"

[node name="Control3" type="Control" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="NewGame" type="Button" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
layout_mode = 2
focus_mode = 0
text = "New Game"

[node name="AreYouSure" type="Control" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer"]
visible = false
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2

[node name="GridContainer2" type="GridContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2"]
layout_mode = 2
text = "Are you sure?"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2/CenterContainer"]
layout_mode = 2
theme_override_constants/h_separation = 90
columns = 2

[node name="Yes" type="Button" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2/CenterContainer/GridContainer"]
layout_mode = 2
text = "Yes"

[node name="No" type="Button" parent="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2/CenterContainer/GridContainer"]
layout_mode = 2
text = "No"

[node name="SaveObject" parent="GridContainer/MainMenu" instance=ExtResource("16_sxmxt")]

[node name="Version" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -566.0
offset_top = -130.0
grow_horizontal = 0
grow_vertical = 0
text = "Test 1.0v"
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("7_4458b")

[node name="Hint" parent="." instance=ExtResource("16_0i5no")]
offset_left = 6104.0
offset_top = 2368.0
offset_right = 4458.0
offset_bottom = 1402.0

[connection signal="item_selected" from="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/SizeOfGameContainer/SizeofGameButton" to="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/SizeOfGameContainer/SizeofGameButton" method="_on_item_selected"]
[connection signal="pressed" from="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/SizeOfGameContainer/SizeofGameButton" to="GridContainer/GameCreator/ScrollContainer/VBoxContainer/GridContainer/SizeOfGameContainer/SizeofGameButton" method="_on_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/ApplySettings" to="GridContainer/MainMenu" method="_on_apply_settings_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/NewGame" to="GridContainer/MainMenu" method="_on_new_game_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2/CenterContainer/GridContainer/Yes" to="GridContainer/MainMenu" method="_on_yes_pressed"]
[connection signal="pressed" from="GridContainer/MainMenu/ScrollContainer/VBoxContainer/MarginContainer/MainMenuUIElements/MarginContainer2/GridContainer/AreYouSure/CenterContainer/GridContainer2/CenterContainer/GridContainer/No" to="GridContainer/MainMenu" method="_on_no_pressed"]
